fix: layout spacing

--- a/extension/content.css
+++ b/extension/content.css
@@ -72,6 +72,7 @@
   line-height: 1.5;
   box-sizing: border-box;
   align-content: center;
+  margin: 0;
 }
 
 #safari-mru-hud.vertical li {
